--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,143 +12,11 @@ $bordeTabla: 0.3vh solid black;
 }
 
 body {    
-    background-color: peru;
+    background-color: antiquewhite;
     width: 100%;
     height: auto;
     display: flex;
     flex-direction: column  ;
 }
 
-.headerListaTurnos {
-    background-color: #1e90ff;
-    width: 100%;
-    height: 10vh;
-    @include disFC;
-    border-bottom: 0.3vh solid darkslategrey;
-    &__img {
-        width: 40%;
-        height: auto;
-    }
-}
-
-.seleccionFecha {
-    width: 100%;
-    height: auto;
-    font-size: 27px;
-    font-family: cursive;
-    font-weight: 600;
-    text-align: center;
-}
-
-.divSelectFechas {
-    width: 100%;
-    height: auto;
-    @include disFC;
-    &__selectFechas {
-        background-color: wheat;
-        width: 60%;
-        height: 35px;
-        font-size: 22px;
-        text-align: center;
-        color: black;
-        border: 0.3vh solid black;
-        border-radius: 0.7vh;
-        &__options {
-            background-color: lightblue;
-            color: black;
-        }
-    }
-}
-
-.divRegistroTurnos {
-    width: 100%;
-    height: auto;
-    padding: 1vh 0vh 1vh 0vh;
-    @include disFC;
-    &__tablaTurnos {
-        width: 85%;
-        height: auto;
-        display: grid;
-        grid-template-columns: 1fr 3fr;
-        grid-template-rows: 35px 30px 30px 30px 30px 30px 30px 30px 30px 30px 30px 30px 30px 30px 30px 30px 30px 30px 30px 30px 30px 30px 30px;
-        border: $bordeTabla;  
-        border-radius: 0.3vh;
-        color: wheat;      
-        &__hora {
-            border-bottom: $bordeTabla;
-            border-right: $bordeTabla;
-            @include disFC;
-            font-family: cursive;
-            font-size: 22px;
-        }
-        &__clientes {
-            border-bottom: $bordeTabla;
-            @include disFC;
-            font-family: cursive;
-            font-size: 22px;
-        }
-        &__bordeHorarios {
-            border-bottom: $bordeTabla;
-            border-right: $bordeTabla;
-            @include disFC;
-            font-family: cursive;
-            font-size: 14px;
-        }
-        &__bordeClientes {
-            border-bottom: $bordeTabla;
-            display: grid;
-            grid-template-columns: 3fr 1fr 1fr;
-            grid-template-rows: 1fr;
-            font-family: cursive;
-            font-size: 15px;
-            &__input {
-                background-color: peru;
-                width: 100%;
-                height: 100%;
-                border: 0;
-                text-align: center;
-            }
-            &__btnSave {              
-                width: 100%;
-                height: auto;
-                @include disFC;
-                &__prop {
-                    width: 47%;
-                    height: auto;
-                    border: $bordeTabla;
-                    border-radius: 0.7vh;
-                }
-            }
-        }
-        &__bordeUltimoHorario {
-            border-right: $bordeTabla;
-            @include disFC;
-            font-family: cursive;
-            font-size: 14px;
-        }
-        &__bordeUltimoCliente {
-            display: grid;
-            grid-template-columns: 3fr 1fr 1fr;
-            grid-template-rows: 1fr;
-            font-family: cursive;
-            font-size: 15px;
-            &__input {
-                width: 100%;
-                height: 100%;
-                border: 0;
-                text-align: center;
-            }
-            &__btnSave {
-                width: 100%;
-                height: auto;
-                @include disFC;
-                &__prop {
-                    width: 47%;
-                    height: auto;
-                    border: $bordeTabla;
-                    border-radius: 0.7vh;
-                }
-            }
-        }
-    }
-}
+@import "listaTurnos";
