--- a/sass/_listaTurnos.scss
+++ b/sass/_listaTurnos.scss
@@ -110,7 +110,9 @@
         display: grid;
         grid-template-columns: 1fr 3fr;
         grid-template-rows: 60px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px 50px;
-        border: $bordeTabla;  
+        border-top: $bordeTabla;  
+        border-right: $bordeTabla;  
+        border-left: $bordeTabla;  
         border-radius: 0.3vh;
         color: wheat;      
         &__hora {
@@ -121,78 +123,58 @@
             font-size: 22px;
             color: black;
         }
-        &__clientes {
+        &__cliente {
             background-color: #1e90ff;
             border-bottom: $bordeTabla;
             @include disFC;
             font-size: 22px;
             color: black;
         }
-        &__bordeHorarios {
+        &__horarios {
+            background-color: wheat;
             border-bottom: $bordeTabla;
             border-right: $bordeTabla;
             @include disFC;
             font-size: 13px;
             color: black;
         }
-        &__bordeClientes {
+        &__inputs {
+            background-color: wheat;
             border-bottom: $bordeTabla;
             display: grid;
-            grid-template-columns: 3fr 1fr 1fr;
-            grid-template-rows: 1fr;
-            font-size: 15px;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1.5fr 1fr;
             &__input {
-                background-color: antiquewhite;
-                width: 100%;
-                height: 100%;
-                border: 0;
-                text-align: center;
-                font-family: 'Roboto Mono', monospace;
-                font-size: 12px;
-            }
-            &__btnSave {              
-                width: 100%;
-                height: auto;
                 @include disFC;
-                &__prop {
-                    background-color: #1e90ff;
-                    width: 80%;
-                    height: auto;
-                    border: $bordeTabla;
-                    border-radius: 0.7vh;
+                &__prop { 
+                    background-color: wheat;
+                    width: 95%;
+                    height: 20px;
+                    font-family: 'Roboto Mono', monospace;
+                    text-align: center;
+                    border: none;
                 }
-            }
-        }
-        &__bordeUltimoHorario {
-            border-right: $bordeTabla;
+            }  
+            &__btn {
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                padding-bottom: 0.5vh;
+                &__prop {
+                    background-color: lightsteelblue;
+                    font-family: 'Roboto Mono', monospace;
+                    border: 0.3vh solid black;
+                    padding: 0vh 2vh 0vh 2vh;
+                }
+            }   
+        } 
+        &__turnoTarde {
+            background-color: burlywood;
+            grid-column: 1/3;
             @include disFC;
-            font-size: 13px;
+            font-size: 20px;
             color: black;
-        }
-        &__bordeUltimoCliente {
-            display: grid;
-            grid-template-columns: 3fr 1fr 1fr;
-            grid-template-rows: 1fr;
-            font-size: 15px;
-            color: black;
-            &__input {
-                width: 100%;
-                height: 100%;
-                border: 0;
-                text-align: center;
-            }
-            &__btnSave {
-                width: 100%;
-                height: auto;
-                @include disFC;
-                &__prop {
-                    background-color: #1e90ff;
-                    width: 80%;
-                    height: auto;
-                    border: $bordeTabla;
-                    border-radius: 0.7vh;
-                }
-            }
+            border-bottom: 0.3vh solid black;            
         }
     }
 }
