--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,8 +16,11 @@ body {
     width: 100%;
     height: auto;
     display: flex;
-    flex-direction: column  ;
+    flex-direction: column;
 }
-
+@import "menuDesplegable";
 @import "index";
 @import "listaTurnos";
+@import "clientes";
+
+
