--- a/sass/main.css
+++ b/sass/main.css
@@ -144,6 +144,14 @@ body {
   font-weight: 700;
 }
 
+.bodyRegistrarse {
+  padding: 10vh 0vh 10vh 0vh;
+}
+
+.divRegistrarse {
+  padding: 4vh 2vh 4vh 2vh;
+}
+
 .headerListaTurnos {
   background-color: burlywood;
   width: 100%;
@@ -286,15 +294,15 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 2vh;
+  padding-bottom: 1vh;
   font-family: "Roboto Mono", monospace;
 }
 .divRegistroTurnos__tablaTurnos {
-  width: 90%;
+  width: 100%;
   height: auto;
   display: grid;
   grid-template-columns: 1fr 3fr;
-  grid-template-rows: 50px 40px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px 40px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px;
+  grid-template-rows: 50px 40px 65px 65px 65px 65px 65px 65px 65px 65px 65px 65px 40px 65px 65px 65px 65px 65px 65px 65px 65px 65px 65px;
   border-top: 0.3vh solid black;
   border-right: 0.3vh solid black;
   border-left: 0.3vh solid black;
@@ -330,33 +338,48 @@ body {
   font-size: 13px;
   color: black;
 }
-.divRegistroTurnos__tablaTurnos__inputs {
+.divRegistroTurnos__tablaTurnos__datosCliente {
   background-color: wheat;
   border-bottom: 0.3vh solid black;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1.5fr 1fr;
 }
-.divRegistroTurnos__tablaTurnos__inputs__input {
+.divRegistroTurnos__tablaTurnos__datosCliente__datos {
+  width: 100%;
+  height: auto;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+}
+.divRegistroTurnos__tablaTurnos__datosCliente__datos__nombre {
+  width: 100%;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.divRegistroTurnos__tablaTurnos__inputs__input__prop {
+.divRegistroTurnos__tablaTurnos__datosCliente__datos__telefono {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.divRegistroTurnos__tablaTurnos__datosCliente__datos__prop {
   background-color: wheat;
   width: 95%;
-  height: 22px;
+  height: 25px;
   font-family: "Roboto Mono", monospace;
   text-align: center;
   border: none;
 }
-.divRegistroTurnos__tablaTurnos__inputs__btn {
+.divRegistroTurnos__tablaTurnos__datosCliente__btn {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   padding-bottom: 0.5vh;
 }
-.divRegistroTurnos__tablaTurnos__inputs__btn__prop {
+.divRegistroTurnos__tablaTurnos__datosCliente__btn__prop {
   background-color: lightsteelblue;
   font-family: "Roboto Mono", monospace;
   border: 0.3vh solid black;
@@ -374,8 +397,9 @@ body {
 }
 
 .bodyClientes {
+  background-color: antiquewhite;
   width: 100%;
-  height: auto;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   padding-top: 12vh;
@@ -397,12 +421,75 @@ body {
   border-radius: 0.5vh;
   text-align: center;
 }
+.bodyClientes__buscador {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bodyClientes__buscador__prop {
+  background-color: lightsteelblue;
+  width: 70%;
+  font-family: "Roboto Mono", monospace;
+  font-size: 15px;
+  font-weight: bold;
+  border: 0.5vh solid black;
+  padding: 1vh 0vh 1vh 0vh;
+  border-radius: 0.5vh;
+  text-align: center;
+}
+.bodyClientes__btnAñadir {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bodyClientes__btnAñadir__prop {
+  background-color: burlywood;
+  width: 50%;
+  height: 40px;
+  padding: 0vh 3vh 0vh 3vh;
+  border: 0.4vh solid black;
+  border-radius: 0.5vh;
+  font-family: "Roboto Mono", monospace;
+  font-size: 12px;
+  font-weight: 600;
+}
+.bodyClientes__nuevoCliente {
+  background-color: lightslategrey;
+  width: 75%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 4vh 3vh 4vh 3vh;
+  border: 0.5vh solid black;
+  border-radius: 0.5vh;
+  display: none;
+}
+.bodyClientes__nuevoCliente__titulo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 2vh;
+}
+.bodyClientes__nuevoCliente__titulo__prop {
+  font-family: "Roboto Mono", monospace;
+  font-size: 19px;
+  font-weight: 600;
+}
+.bodyClientes__nuevoCliente__bgBtnGuardar {
+  background-color: burlywood;
+}
 .bodyClientes__divListaClientes {
+  background-color: wheat;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   gap: 2vh;
+  padding: 0vh 0vh 5vh 0vh;
 }
 .bodyClientes__divListaClientes__cliente {
   width: 85%;
@@ -445,6 +532,8 @@ body {
   grid-column: 1/3;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  font-family: "Roboto Mono", monospace;
+  font-weight: 600;
 }
 .bodyClientes__divListaClientes__cliente__btn__ref {
   width: 100%;
@@ -459,6 +548,8 @@ body {
   padding: 0.5vh 0vh 0.5vh 0vh;
   border: 0.4vh solid black;
   border-radius: 0.5vh;
+  font-family: "Roboto Mono", monospace;
+  font-weight: 600;
 }
 .bodyClientes__divListaClientes__cliente__btn__del {
   width: 100%;
